<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shape-mergency</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_button">New Game</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="instructions">Difficulty level:</string>
    <string name="high_scores">High Scores</string>
    <string name="high_score_title">High Scores</string>
    <string name="settings_button">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_vibration">Enable Vibration</string>
    <string name="settings_sound">Enable Sound</string>
    <string name="resume_button">Resume</string>
    <string name="clear_high_scores">Clear High Scores</string>
    <string name="about_button">About</string>
    <string name="about_title">About</string>
    <string name="about_text"><![CDATA[Shape-mergency. By Andrew Gray. For James and David. <a href="https://github.com/adsgray/shapemergency">Source code</a>.]]></string>
    <string name="clear_hs_confirm">Are you sure you want to clear high scores?</string>
    <string name="clear_hs_confirm_title">Clear High Scores</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="help_title">Help</string>
    <string name="help_text">Drag Triangle to move. Tap Triangle to shoot. Swipe down on Triangle to activate shield. Avoid bombs. Catch BONUSes.</string>
</resources>
