<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/settings_title" 
        />

    <CheckBox
        android:id="@+id/soundcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings_title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings_sound" />

    <CheckBox
        android:id="@+id/vibratecheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/soundcheckbox"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings_vibration" />

</RelativeLayout>
