<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<RelativeLayout 
    android:id="@+id/game_buttons"
	android:layout_below="@+id/difficulty_choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
    >
    <Button
        android:id="@+id/play_button"
        android:text="@string/play_button" 

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        />
        <!--   

        -->
</RelativeLayout>
    
    <!-- 
    
		android:layout_toEndOf="@+id/difficulty_choices"

        android:layout_marginLeft="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
    
     -->

        <Button
            android:id="@+id/high_score_button"
            android:text="@string/high_scores" 

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
	        android:layout_centerHorizontal="true"

            android:layout_below="@+id/game_buttons"

            android:layout_marginTop="20dp"

        	android:paddingBottom="15dp"
        	android:paddingLeft="25dp"
        	android:paddingRight="25dp"
        	android:paddingTop="15dp" 
            />
        
        <!--   

	     android:layout_marginBottom="160dp" 
            android:layout_toEndOf="@+id/play_button"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"

        -->

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/high_score_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:text="@string/settings_button" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/difficulty_choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/instructions"
        android:layout_marginTop="14dp" 
        android:layout_marginLeft="50dp" 
        >

        <include
            layout="@layout/difficulty_menu" />
    </LinearLayout>
    <!--  
        android:layout_alignLeft="@+id/play_button"

    -->

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:text="@string/help_title" />

</RelativeLayout>